--- a/style.css
+++ b/style.css
@@ -88,14 +88,14 @@ body {
     height: 100dvh;
 }
 body > * {
-    width: clamp(200px, 85%, 600px);
+    width: clamp(335px, 90%, 550px);
     margin: 0 auto;
 }
 header {
     height: 30dvh;
 }
 header h1 {
-    font-size: 3.5rem;
+    font-size: 2.5rem;
     text-align: center;
     padding: 6rem 0 1rem 0;
     text-transform: uppercase;
@@ -113,18 +113,13 @@ main {
 /**
     estilo referente a pagina inicial
 **/
-#pagina_inicial > * {
-    background: hsl(200, 20%, 50%);
-    padding: 0 2rem;
-}
+
 #pagina_inicial header {
     border-radius: 0.5rem 0.5rem 0 0;
 }
-#pagina_inicial main {
-    border-radius: 0 0 0.5rem 0.5rem;
-}
 #pagina_inicial #container_botoes {
     height: 100%;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     row-gap: 1rem;
@@ -134,7 +129,7 @@ main {
     font-size: 2rem;
     height: 6rem;
     background: none;
-    border: 4px solid var(--color-light);
+    border: 2px solid var(--color-light);
     border-radius: 0.5rem;
     color: var(--color-light);
     text-transform: uppercase;
@@ -146,7 +141,7 @@ main {
 }
 #pagina_inicial #container_botoes button.desativado {
     background: var(--color-dark-deactivated);
-    border: 4px solid var(--color-light-deactivated);
+    border: 2px solid var(--color-light-deactivated);
     color: var(--color-light-deactivated);
 }
 
@@ -162,7 +157,7 @@ main {
     font-size: 2.5rem;
     height: 3.5rem;
     width: 3.5rem;
-    border: 4px solid var(--color-light);
+    border: 2px solid var(--color-light);
     border-radius: 0.5rem;
     background: var(--color-light);
     color: var(--color-dark);
@@ -282,15 +277,32 @@ main {
     flex-shrink: 1;
     flex-basis: 2.5rem;
     flex-grow: 1;
-    height: 4rem;
+    height: 3rem;
     font-size: 2rem;
     border: none;
     border-radius: 0.5rem;
 }
 
+@media (min-width: 405px) {
+    #pagina_inicial h1 {
+        font-size: 3.5rem;
+    }
+    #pagina_inicial header {
+        height: 30dvh;
+    }
+    #pagina_inicial main {
+        height: 70dvh;
+    }
+}
 
-@media (max-height: 800px) {
+@media (min-height: 800px) {
+    #pagina_inicial header {
+        height: 30dvh;
+    }
+    #pagina_inicial main {
+        height: 70dvh;
+    }
     #jogo #container_alfabeto button {
-        height: 3rem;
+        height: 4rem;
     }
 }
